# bendcontourpy

./: README.md  __init__.py  experiment.py  pyproject.toml  setup.py  surfaces.py
bendcontourpy/: surfaces.py
bendcontourpy/optimization/: simulated_annealing.py
optimization/: __init__.py  cost_functions.py  least_squares_method.py  optimizer.py  simulated_annealing.py
src/bendcontourpy/: __init__.py  experiment.py  surfaces.py
src/bendcontourpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bendcontourpy/optimization/: least_squares_method.py  optimizer.py
src/bendcontourpy/tests/: test_surfaces_experiment.ipynb
src/bendcontourpy/visualization/: __init__.py  surface_visualization.py
utils/: __init__.py  image_processing.py  math_utils.py
visualization/: __init__.py  general_visualizations.py
