[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bendcontourpy"
version = "0.1.0"
description = "A package for bend contour analysis in TEM"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["bendcontourpy", "bendcontourpy.optimization", "bendcontourpy.visualization", "bendcontourpy.utils"]